# rsqlite3

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  executor.rs  main.rs  pager.rs  schema.rs  sql.lalrpop  sql.rs  sqlite3.lalrpop  sqlite3.pest  table.rs
src/bptree/: bp_tree.rs  entry.rs  mod.rs  serializer.rs
src/bptree/bp_tree_node/: leaf_node.rs  mod.rs
src/bptree/bp_tree_node/internal_node/: internal_node_entry.rs  mod.rs
src/btree/: bp_tree.rs  bp_tree_node.rs  entry.rs  mod.rs
src/btree/bp_tree_node/: leaf_node.rs  mod.rs
src/btree/bp_tree_node/internal_node/: mod.rs
src/database/: factory.rs  mod.rs  table_schema.rs  table_value.rs
src/database/data/: mod.rs  serializer.rs  table_schema.rs  table_value.rs
src/database/io/: mod.rs
src/database/table/: mod.rs
src/executor/: mod.rs  table.rs
src/table/: bptree.rs  mod.rs
