[package]
name = "rust-sql-db"
version = "0.1.0"
authors = ["Ryan Lee <drdgvhbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.17.1"

[dependencies]
regex = "0.2.1"
chashmap = "2.2.2"
rustyline = "5.0.2"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14.0"
positioned-io-preview = "0.3.3"
lalrpop-util = "0.17.1"
clap = "2.33.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
mockers = "0.21.0"
mockers_derive = "0.21.0"
tempfile = "3.1.0"
